# MemFast

./: .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md
src/: lib.rs  main.rs
